--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
   "name": "yonyy.github.io",
   "version": "1.0.0",
-  "description": "About me",
+  "description": "Enjoy",
   "main": "index.js",
   "repository": "https://github.com/yonyy/yonyy.github.io",
   "author": "Yonatan Perez",
   "license": "MIT",
   "dependencies": {
-    "path": "^0.12.7",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "webpack": "^3.1.0",
-    "webpack-dev-server": "^2.5.0"
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1"
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babelify": "^8.0.0",
+    "browserify": "^16.2.0",
+    "gulp": "^3.9.1",
+    "gulp-csso": "^3.0.1",
+    "gulp-sass": "^4.0.1",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-uglify": "^3.0.0",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
