--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Yonatan Perez",
   "license": "MIT",
   "dependencies": {
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
