--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "babelify": "^8.0.0",
     "browserify": "^16.2.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-csso": "^3.0.1",
+    "gulp-notify": "^3.2.0",
+    "gulp-plumber": "^1.2.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
