--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "scripts": {
-    "start": "gulp && node index.js"
+    "start": "gulp && node index.js",
+    "dev": "gulp dev && node index.js"
   }
 }
