--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Yonatan Perez",
   "license": "MIT",
   "dependencies": {
+    "eslint": "^4.19.1",
     "express": "^4.16.3",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
@@ -18,6 +19,8 @@
     "babel-preset-react": "^6.24.1",
     "babelify": "^8.0.0",
     "browserify": "^16.2.0",
+    "eslint": "^4.19.1",
+    "eslint-plugin-react": "^7.7.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-csso": "^3.0.1",
