--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint": "^4.19.1",
     "express": "^4.16.3",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
