Implement sort functionality

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
         "ecmaFeatures": {
             "experimentalObjectRestSpread": true,
             "jsx": true
-        }
+        },
+        "ecmaVersion": 2017
     },
     "plugins": [
         "react"
