--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Yonatan Perez",
   "license": "MIT",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "eslint": "^4.19.1",
     "express": "^4.16.3",
     "jquery": "^3.3.1",
