--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ node_modules/
 .vscode
 **/.DS_Store
 **/*.map
+**/.cache
 brewkrew/db/client_secret.json
 brewkrew/db/credentials.json
 brewkrew/db/api-key.json
